<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="menu_preferences">Preferences</string>
    <string name="clear_history">Clear history now</string>
    <string name="clear_history_on_exit">Clear on exit</string>
    <string name="clear_history_on_exit_summary">Clear history on exit</string>
    <string name="prefs_history_title">History</string>
    <string name="history">History</string>
    <string name="sdcard_not_found">SDCard not found</string>
    <string name="database_installed_successfully">Database installed successfully</string>
    <string name="unknown_error_occured">Unknown error occured</string>
    <string name="unable_to_create_file">Unable to create file!</string>
    <string name="please_wait">Please wait...</string>
    <string name="preferences">Preferences</string>
    <string name="hello">Hello World, BGDict!</string>
    <string name="app_name">BGDictum</string>
    <string name="dictionary_url">http://bulkey.googlecode.com/files/bgdictum.db.zip</string>
    <string name="dictionary_url_test">http://cloud.github.com/downloads/sashomasho/bgdictum/test.zip</string>
    <string name="no_sdcard_warning">Warning: Can\'t use SD Card, using internal storage instead</string>
    <string name="download_question_title">Download dictionary file</string>
    <string name="download_question">The file is approximately 7MB in size, so you may want to download it through a WiFi connection.</string>
    <string name="download">Download</string>
    <string name="downloading">Downloading %d%%</string>
    <string name="extracting">Extracting %d%%</string>
    <string name="completed">Completed</string>
    <string name="quit">Quit</string>
    <string name="preference_use_light_theme">Use light theme</string>
    <string name="preference_use_light_theme_summary">(*Requires restart)</string>
    <string name="preference_look_and_feel">Look and feel</string>
    <string name="preference_enable_word_click">Enable word clicking</string>
    <string name="preference_enable_word_click_popup">Enable popup</string>
    <string name="warning">Warning</string>
    <string name="no_sdcard_setup_message">Your sdcard is not currenntly mounted. Do you want to download and extract dictionary data on internal storage?</string>
    <string name="yes">Yes</string>
    <string name="can_t_find_db_is_your_sdcard_mounted">Can\'t find db, is your sdcard mounted?</string>
    <string name="query_hint">type text here</string>
    <string name="preferences_text_font">Text Font</string>
    <string name="preferences_text_font_summary">Select text font (*Requires restart)</string>

    <string-array name="font_indexes">
        <item>sans</item>
        <item>serif</item>
    </string-array>

    <string-array name="font_names">
        <item>Sans</item>
        <item>Serif</item>
    </string-array>

</resources>
