<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
            android:title="@string/preference_look_and_feel">

	    <CheckBoxPreference
	        android:key="preference_use_light_theme"
	        android:title="@string/preference_use_light_theme"
            android:summaryOn="@string/preference_use_light_theme_summary"
            android:summaryOff="@string/preference_use_light_theme_summary"
            android:defaultValue="false"
	    />

        <CheckBoxPreference
            android:key="preference_enable_word_click"
            android:title="@string/preference_enable_word_click"
            android:summaryOn="@string/preference_enable_word_click_summary"
            android:summaryOff="@string/preference_enable_word_click_summary"
            android:defaultValue="false"
        />

<!--
        <CheckBoxPreference
            android:key="preference_enable_word_click_popup"
            android:title="@string/preference_enable_word_click_popup"
            android:dependency="preference_enable_word_click"
        />
-->

    </PreferenceCategory>
    
    <PreferenceCategory
            android:title="@string/prefs_history_title">
        <CheckBoxPreference
            android:key="preference_clear_history_on_exit"
            android:title="@string/clear_history_on_exit"
            android:summaryOn="@string/clear_history_on_exit_summary"
            android:summaryOff="@string/clear_history_on_exit_summary"
        />
        <PreferenceScreen
            android:key="history"
            android:title="@string/clear_history"
            android:persistent="false"
        />
    </PreferenceCategory>    
</PreferenceScreen>
